force-app/main/default/objects/Assessment__c/fields/Abilities__c.field-meta.xml
<CustomField>
    <fullName>Abilities__c</fullName>
    <label>Abilities</label>
    <type>TextArea</type>
</CustomField>