force-app/main/default/objects/Assessment__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <length>30</length>
    <type>Text</type>
</CustomField>