force-app/main/default/objects/Assessment__c/fields/Behaviour_History__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_History__c</fullName>
    <label>Behaviour/History</label>
    <type>TextArea</type>
</CustomField>