force-app/main/default/objects/Assessment__c/fields/Carer__c.field-meta.xml
<CustomField>
    <fullName>Carer__c</fullName>
    <label>Carer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>