force-app/main/default/objects/Assessment__c/fields/Emotional_Goals__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Goals__c</fullName>
    <label>Emotional Goals</label>
    <type>TextArea</type>
</CustomField>