force-app/main/default/objects/Assessment__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>TextArea</type>
</CustomField>