force-app/main/default/objects/Assessment__c/fields/Mentor_Preference__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Preference__c</fullName>
    <label>Mentor Preference</label>
    <type>TextArea</type>
</CustomField>