force-app/main/default/objects/Assessment__c/fields/Ocean__c.field-meta.xml
<CustomField>
    <fullName>Ocean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ocean</label>
    <type>Checkbox</type>
</CustomField>