force-app/main/default/objects/Assessment__c/fields/Personality_Summary__c.field-meta.xml
<CustomField>
    <fullName>Personality_Summary__c</fullName>
    <label>Personality/Summary</label>
    <type>TextArea</type>
</CustomField>