force-app/main/default/objects/Assessment__c/fields/Physical_Goals__c.field-meta.xml
<CustomField>
    <fullName>Physical_Goals__c</fullName>
    <label>Physical Goals</label>
    <type>TextArea</type>
</CustomField>