force-app/main/default/objects/Assessment__c/fields/Social_Goals__c.field-meta.xml
<CustomField>
    <fullName>Social_Goals__c</fullName>
    <label>Social Goals</label>
    <type>TextArea</type>
</CustomField>