force-app/main/default/objects/Assessment__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support</label>
    <type>TextArea</type>
</CustomField>