force-app/main/default/objects/Assessment__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>TextArea</type>
</CustomField>